k8s/hw-13/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: study-hw13
  labels:
    toolkit.fluxcd.io/tenant: dev-team
