k8s/hw-13/manifests/mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: study-hw13
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: mariadb:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: database-storage
              mountPath: /var/lib/mysql
          livenessProbe:
            exec:
              command: ["mariadbcheck", "-h", "127.0.0.1", "-u", "admin", "--password=pass", "flask_alb"]
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: study-hw13
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
